--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "pymupdf>=1.25.4",
     "python-dotenv>=1.1.0",
     "streamlit>=1.44.1",
+    "PyPDF2>=3.0.1",
+    "python-docx>=0.8.11",
 ]
